--- a/PescAR/app/src/main/res/values/colors.xml
+++ b/PescAR/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="common">#0087E1</color>
+    <color name="rare">#A916DD</color>
+    <color name="legendary">#FFC800</color>
+    <color name="abyssal">#0206B6</color>
 </resources>
